@@ -5,6 +5,7 @@ UNRELEAESD  David Schweikert  <david@schweikert.ch>
   * Fix removing of unreachable hosts when doing loop (Thomas Liske, #13 #23)
   * Fix -A for fping6 (reported by Matt LaPlante, #14)
   * Fix "options inet6" breaking IPv4 name resolution (reported by Matt LaPlante, #17)
+  * Output statistics to stdout instead of stderr (suggested by Simon Leinen, #9)
   * Set default data size to 56 bytes on all architectures (#18)
   * Added contrib/fping.spec (Stephen Schaefer, #24)
   * Convert man-page source to POD for easier maintenance
